[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aoc-helpers = { path = "../aoc-helpers" }
aoc-helpers = { git = "https://github.com/pierd/aoc-helpers", rev = "a34f613" }
lazy_static = "1.4.0"
md5 = "0.7.0"
rayon = "1.5.3"
regex = "1.5.6"
rematch = "0.1.2"
